fixed width issues to make responsive on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 .App{
     font-family: 'Dancing Script', cursive;
+    @media screen and (max-width:540px){
+        max-width:320px;
+    }
 }
